<resources>
    <string name="app_name">mapscode</string>
    <string name="title_activity_maps">Map</string>
    <string name="Username">Name</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">NIC</string>
    <string name="LastName">Phone#</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Registration Page</string>
</resources>
