<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/RegistrationPage"
        tools:context=".signup">
        <LinearLayout
            android:id="@+id/LinearRP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:text="Customer Registration"
                android:textSize="20sp" />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/customer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8.0dip"
            android:layout_marginEnd="8.0dip"
            android:layout_marginBottom="8.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/btn_signup"
            android:text="Customer"
            android:theme="@style/ButtonSignUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:onClick="CustomertoCustomer"/>
        <Button
            android:id="@+id/raahi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8.0dip"
            android:layout_marginEnd="8.0dip"
            android:layout_marginBottom="8.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/btn_signup"
            android:text="Raahi"
            android:theme="@style/ButtonSignUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:onClick="customertoraahi"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/RegistrationPage">


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:hint="@string/Username"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInLayoutRegPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/Password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_NIC"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/FirstName"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/LastName"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:text="Upload NIC image"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:id="@+id/nicimage"
            android:layout_width="105dp"
            android:layout_height="20dp"
            android:layout_marginLeft="140dp" />

        <Button
            android:id="@+id/reg_images"
            android:layout_width="161dp"
            android:layout_height="34dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:onClick="cameras"
            android:text="Camera"
            android:theme="@style/ButtonRegister" />


        <Button
            android:id="@+id/reg_register"
            android:layout_width="154dp"
            android:layout_height="33dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:onClick="register"
            android:text="@string/Register"
            android:theme="@style/ButtonRegister" />

        <Button
            android:id="@+id/reg_code"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:onClick="checkcode"
            android:text="submit"
            android:theme="@style/ButtonRegister" />

        <EditText
            android:id="@+id/smsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Code"
            android:textColor="@color/black"
            android:textSize="10sp" />

    </LinearLayout>

    </LinearLayout>
